# simpleworkernet

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/: FUNDING.yml
.github/workflows/: workflow.yml
src/simpleworkernet/: __init__.py  __main__.py  __version__.py  cli.py
src/simpleworkernet/core/: cache.py  client.py  config.py  constants.py  exceptions.py  logger.py  typing.py
src/simpleworkernet/models/: base.py  operators.py  primitives.py
src/simpleworkernet/models/categories/: __init__.py  additional_data.py  address.py  advertising.py  attach.py  billing.py  cable_route.py  call.py  commutation.py  cross.py  customer.py  cwdm.py  device.py  employee.py  fiber.py  gps.py  inventory.py  key.py  map.py  module.py  node.py  notepad.py  owner.py  service.py  setting.py  sms.py  splitter.py  system.py  tariff.py  task.py  trader.py  vehicle.py  vlan.py
src/simpleworkernet/scripts/: __init__.py  uninstall.py
src/simpleworkernet/smartdata/: __init__.py  core.py  helpers.py  metadata.py  processor.py
src/simpleworkernet/utils/: __init__.py  app_name.py  coordinates.py  decorators.py  graph.py  graphics.py  topology.py
