[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simpleworkernet"
version = "0.0.3b35"
description = "Python клиент для API WorkerNet с поддержкой SmartData"
readme = "README.md"
authors = [
    { name = "BusyBeaver", email = "busybeaver.bb@gmail.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "requests>=2.25.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["workernet", "api", "client", "billing", "provider", "smartdata"]

[project.scripts]
cleanup-simpleworkernet = "simpleworkernet.cli:main"

[project.urls]
Homepage = "https://github.com/BusyBeaver54/simpleworkernet"
Repository = "https://github.com/BusyBeaver54/simpleworkernet"
Documentation = "https://github.com/BusyBeaver54/simpleworkernet#readme"

[tool.setuptools.packages.find]
where = ["src"]
include = ["simpleworkernet*"]

[tool.setuptools.package-data]
simpleworkernet = ["py.typed"]

# [tool.pytest.ini_options]
# testpaths = ["tests"]
# python_files = ["test_*.py"]
# python_classes = ["Test*"]
# python_functions = ["test_*"]
# addopts = "-v --tb=short --strict-markers"
# markers = [
#     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
#     "integration: marks tests as integration tests",
#     "graphics: marks tests that require graphics libraries",
# ]