[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simpleworkernet"
version = "1.0.6"
description = "Python клиент для API WorkerNet с поддержкой SmartData"
readme = "README.md"
authors = [
    { name = "Андрей Литвинов", email = "busy4beaver@gmail.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "requests>=2.25.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["workernet", "userside", "api", "erp"]

[project.scripts]
cleanup-simpleworkernet = "simpleworkernet.cli:main"

[project.urls]
Homepage = "https://github.com/busy4beaver"
Repository = "https://github.com/busy4beaver/simpleworkernet"
Documentation = "https://github.com/busy4beaver/simpleworkernet#readme"
Funding = "https://yoomoney.ru/to/4100118099549894"
Donation = "https://boosty.to/busybeaver/donate"

[tool.setuptools.packages.find]
where = ["src"]
include = ["simpleworkernet*"]

[tool.setuptools.package-data]
simpleworkernet = ["py.typed"]
